# accesskit-java

./: .gitignore  Cargo.toml  build-macos-dist
src/: common.rs  lib.rs  macos.rs  windows.rs
src/java/dev/accesskit/: Action.java  ActivationHandler.java  MacosSubclassingAdapter.java  Node.java  Role.java  Toggled.java  TreeUpdate.java  WindowsSubclassingAdapter.java
