[package]
name = "accesskit-java"
version = "0.1.0"
authors = ["Matt Campbell <mattcampbell@pobox.com>"]
license = "MIT/Apache-2.0"
publish = false
edition = "2021"

[lib]
name = "accesskit_jni"
crate-type = ["cdylib"]

[dependencies]
accesskit = { version = "0.21.0", features = ["enumn"] }
jni = "0.21.1"

[target.'cfg(target_os = "windows")'.dependencies]
accesskit_windows = "0.29.0"

[target.'cfg(target_os = "macos")'.dependencies]
accesskit_macos = "0.22.0"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
debug = true
