[package]
name = "accesskit-java"
version = "0.1.0"
authors = ["Matt Campbell <mattcampbell@pobox.com>"]
license = "MIT/Apache-2.0"
publish = false
edition = "2021"

[lib]
name = "accesskit_jni"
crate-type = ["cdylib"]

[dependencies]
accesskit = { git = "https://github.com/AccessKit/accesskit", branch = "quorum-work", features = ["enumn"] }
jni = "0.21.1"

[target.'cfg(target_os = "windows")'.dependencies]
accesskit_windows = { git = "https://github.com/AccessKit/accesskit", branch = "quorum-work" }

[target.'cfg(target_os = "macos")'.dependencies]
accesskit_macos = { git = "https://github.com/AccessKit/accesskit", branch = "quorum-work" }

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
debug = true
